--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>help_outline </p>
+<head>header</head>
+<main>Main section</main>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur possimus ab quos ullam! Porro voluptatibus molestias dolore, praesentium laborum, eum inventore, eligendi aliquam animi asperiores cum reiciendis eius reprehenderit nostrum? </p>
     <p>help_outline </p>
 <ol>
     <li>poz1</li>
